--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
                  </div>
               </div>
           </div>
-          
+          <div class="understand">
+              <div class="understand-left">
+                  mm
+              </div>
+              <div class="understand-right">
+                 mmm
+              </div>
+          </div>
      </div>
   </body>
 </html>
