--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
           </div>
           <div class="understand">
               <div class="understand-left">
-                  mm
+                  <h1></h1>
+                  <p></p>
+                  <div class="buttons">
+                    <input id="Google" type="button" name="" value="Sign up With Google">
+                    <i>or</i>
+                    <input id="Slack" type="button" name="" value="Sign up with Slack">
+                  </div>
               </div>
               <div class="understand-right">
                  mmm
