--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
               </div>
           </div>
           <div class="traditional">
+              <div class="traditional-container">
 
+              </div>
           </div>
       </div>
   </body>
