--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
           </div>
           <div class="traditional">
               <div class="traditional-container">
+                  <h2>Traditional people processes lead to disengagement and turnover.</h2>
+                  <div class="three-items-row">
 
+                  </div>
               </div>
           </div>
       </div>
