--- a/index.html
+++ b/index.html
@@ -147,6 +147,18 @@
                   </div>
               </div>
           </div>
+          <div class="see_Teambit">
+              <div class="see_Teambit-container">
+                  <h5>See Teambit for yourself.Get started in seconds </h5>
+                  <img src="" alt="">
+                  <div class="buttons">
+                      <input id="Google" type="button" name="" value="Sign up With Google">
+                      <i>or</i>
+                      <input id="Slack" type="button" name="" value="Sign up with Slack">
+                  </div>
+                  <i>or use your e-mail adress <i class="fas fa-arrow-right"></i></i>
+              </div>
+          </div>
       </div>
   </body>
 </html>
