--- a/index.html
+++ b/index.html
@@ -159,6 +159,16 @@
                   <i>or use your e-mail adress <i class="fas fa-arrow-right"></i></i>
               </div>
           </div>
+          <div class="footer">
+            <div class="footer-container">
+                <div class="footer-left">
+
+                </div>
+                <div class="footer-right">
+
+                </div>
+            </div>
+          </div>
       </div>
   </body>
 </html>
