--- a/index.html
+++ b/index.html
@@ -168,7 +168,30 @@
                     <p>Teambit helps teams create high performing cultures by making feedback a daily habit.</p>
                 </div>
                 <div class="footer-right">
-
+                  <div class="link-container">
+                      <h3>Product</h3>
+                      <ul>
+                          <li>Feedback</li>
+                          <li>Survey</li>
+                          <li>Reviews</li>
+                          <li>Praise</li>
+                          <li>Slack Integration</li>
+                          <li>Schedule a demo</li>
+                          <li>Pricing</li>
+                      </ul>
+                  </div>
+                  <div class="link-container">
+                      <h3>Product</h3>
+                      <ul>
+                          <li>Feedback</li>
+                          <li>Survey</li>
+                          <li>Reviews</li>
+                          <li>Praise</li>
+                          <li>Slack Integration</li>
+                          <li>Schedule a demo</li>
+                          <li>Pricing</li>
+                      </ul>
+                  </div>
                 </div>
             </div>
           </div>
