--- a/index.html
+++ b/index.html
@@ -181,15 +181,39 @@
                       </ul>
                   </div>
                   <div class="link-container">
-                      <h3>Product</h3>
+                      <h3>About</h3>
                       <ul>
-                          <li>Feedback</li>
-                          <li>Survey</li>
-                          <li>Reviews</li>
-                          <li>Praise</li>
-                          <li>Slack Integration</li>
-                          <li>Schedule a demo</li>
-                          <li>Pricing</li>
+                          <li>About</li>
+                          <li>Terms and privacy</li>
+                          <li>Help Center</li>
+                          <li>Blog</li>
+                          <li>Digest</li>
+                      </ul>
+                  </div>
+                  <div class="link-container">
+                      <h3>Connect</h3>
+                      <ul>
+                          <li>Contact us</li>
+                          <li>Facebook</li>
+                          <li>Instagram</li>
+                          <li>Twitter</li>
+                      </ul>
+                  </div>
+                  <div class="link-container">
+                      <h3>Labs</h3>
+                      <ul>
+                          <li>Manager checklist</li>
+                          <li>Manager assessment</li>
+                          <li>Manager Handbook</li>
+                      </ul>
+                  </div>
+                  <div class="link-container">
+                      <h3>From the blog</h3>
+                      <ul>
+                          <li>How to change your company culture:a four-step framework</li>
+                          <li>How teams can be more productive by killing 8-hour workday</li>
+                          <li>How to build high performing teams inspired by nature</li>
+                          <li>View all <i class="fas fa-arrow-right"></i></li>
                       </ul>
                   </div>
                 </div>
