--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                       <i>or</i>
                       <input id="Slack" type="button" name="" value="Sign up with Slack">
                   </div>
-                  <i>or use your e-mail adress <i class="fas fa-arrow-right"></i></i>
+                  <span>or use your e-mail adress <i class="fas fa-arrow-right"></i></span>
               </div>
           </div>
           <div class="footer">
