--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                   </div>
               </div>
           </div>
-      <!--    <div class="survey">
+          <div class="survey">
               <div class="survey-container">
                   <div class="survey-left">
                       <h3>Surveys to help the team be better</h3>
@@ -114,7 +114,7 @@
                     </div>
                   </div>
               </div>
-          </div>-->
+          </div>
           <div class="feedback">
               <div class="feedback-container">
                   <div class="feedback-left">
