--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                             <li>How to change your company culture:a four-step framework</li>
                             <li>How teams can be more productive by killing 8-hour workday</li>
                             <li>How to build high performing teams inspired by nature</li>
-                            <li>View all <i class="fas fa-arrow-right"></i></li>
+                            <li id="blue">View all <i class="fas fa-arrow-right"></i></li>
                         </ul>
                     </div>
                   </div>
